[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleMainPanel/HeatModulePanel_HeaderBackground.png" type="Texture" id=2]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleMainPanel/HeatModulePanel_TopDownBorder.png" type="Texture" id=3]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleMainPanel/HeatModulePanel_AboutButton.png" type="Texture" id=4]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleMainPanel/HeatModulePanel_BodyBackground.png" type="Texture" id=5]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleBar/HeatModuleBarPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModulePrimaryStat/HeatPrimaryStatPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Orange_Related/Panels/HeatModuleMainPanel/HeatModulePanel.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="HeatModulePanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 6
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 110.0
margin_bottom = 68.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="HeaderPanel" type="MarginContainer" parent="VBoxContainer"]
margin_right = 110.0
margin_bottom = 13.0
mouse_filter = 2

[node name="HeaderMarginer" type="MarginContainer" parent="VBoxContainer/HeaderPanel"]
margin_right = 66.0
margin_bottom = 13.0
mouse_filter = 2
size_flags_horizontal = 2

[node name="HeaderBackground" type="TextureRect" parent="VBoxContainer/HeaderPanel/HeaderMarginer"]
margin_right = 66.0
margin_bottom = 13.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderPanel/HeaderMarginer"]
margin_left = 13.0
margin_top = 1.0
margin_right = 53.0
margin_bottom = 12.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/margin_top = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderPanel/HeaderMarginer/MarginContainer"]
margin_top = 2.0
margin_right = 40.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
text = "Heat Index"

[node name="About" type="TextureButton" parent="VBoxContainer/HeaderPanel"]
margin_left = 96.0
margin_right = 110.0
margin_bottom = 13.0
focus_mode = 0
size_flags_horizontal = 10
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )

[node name="TopBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 13.0
margin_right = 110.0
margin_bottom = 14.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="BodyPanel" type="MarginContainer" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 110.0
margin_bottom = 67.0
mouse_filter = 2
size_flags_vertical = 3

[node name="BodyBackground" type="TextureRect" parent="VBoxContainer/BodyPanel"]
margin_right = 110.0
margin_bottom = 53.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BodyPanel"]
margin_right = 110.0
margin_bottom = 53.0
mouse_filter = 2

[node name="HeatPrimaryStatPanel" parent="VBoxContainer/BodyPanel/VBoxContainer" instance=ExtResource( 7 )]
margin_left = 2.0
margin_right = 108.0
margin_bottom = 34.0
size_flags_horizontal = 6
custom_constants/margin_top = 3

[node name="HeatModuleBarPanel" parent="VBoxContainer/BodyPanel/VBoxContainer" instance=ExtResource( 6 )]
margin_left = 2.0
margin_top = 38.0
margin_right = 108.0
margin_bottom = 53.0
size_flags_horizontal = 6
custom_constants/margin_bottom = 3

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 110.0
margin_bottom = 68.0
mouse_filter = 2
texture = ExtResource( 3 )
[connection signal="mouse_exited" from="VBoxContainer/HeaderPanel/About" to="." method="_on_About_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HeaderPanel/About" to="." method="_on_About_pressed"]
